# gh-wizard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  eisenhower_matrix.json  lighthouse-report  pyproject.toml
src/gh_wizard/: __init__.py  ai.py  cli.py  cli.py.bak  github_api.py  notifications.py  pomodoro.py  priorities.py  progress_tracker.py  session.py  stats.py  tasks.py
src/gh_wizard/ui/: __init__.py  colors.py  dashboard.py  progress.py
src/gh_wizard/utils/: config.py  logger.py
tests/: __init__.py  test_pomodoro.py  test_priorities.py  test_session.py  test_stats.py  test_tasks.py
